@startuml
interface AttackAction {
  +getActionName() : String
  +getDamage() : int
  +getEffectSummary() : String
}

class BasicAttack {
  -actionName : String
  -baseDamage : int
  +BasicAttack(actionName : String, baseDamage : int)
  +getActionName() : String
  +getDamage() : int
  +getEffectSummary() : String
}

abstract class ActionDecorator {
  -wrappedAction : AttackAction
  #ActionDecorator(wrappedAction : AttackAction)
  #getWrappedAction() : AttackAction
  +getActionName() : String
  +getDamage() : int
  +getEffectSummary() : String
}

class FireRuneDecorator {
  +FireRuneDecorator(wrappedAction : AttackAction)
  +getActionName() : String
  +getDamage() : int
  +getEffectSummary() : String
}

class PoisonCoatingDecorator {
  +PoisonCoatingDecorator(wrappedAction : AttackAction)
  +getActionName() : String
  +getDamage() : int
  +getEffectSummary() : String
}

class CriticalFocusDecorator {
  +CriticalFocusDecorator(wrappedAction : AttackAction)
  +getActionName() : String
  +getDamage() : int
  +getEffectSummary() : String
}

AttackAction <|.. BasicAttack
AttackAction <|.. ActionDecorator
ActionDecorator o-- AttackAction
ActionDecorator <|-- FireRuneDecorator
ActionDecorator <|-- PoisonCoatingDecorator
ActionDecorator <|-- CriticalFocusDecorator
@enduml